--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:id="@+id/progressBar"
+            android:id="@+id/timePB"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:max="100" android:progress="50" android:scaleY="3f"/>
@@ -19,15 +19,47 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lookingForTXT"
-            app:layout_constraintTop_toBottomOf="@+id/progressBar" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/timePB" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toStartOf="@+id/answerTXT"/>
+            app:layout_constraintEnd_toStartOf="@+id/answerTXT" android:textColor="#000" android:textSize="80dp"/>
     <TextView
             android:text="20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/answerTXT"
-            app:layout_constraintTop_toBottomOf="@+id/progressBar" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/timePB" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/lookingForTXT"
-            app:layout_constraintHorizontal_bias="0.5"/>
+            app:layout_constraintHorizontal_bias="0.5" android:textSize="80sp" android:textColor="#000"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/timesET"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/lookingForTXT"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+            android:text="x2 +"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/equationTXT"
+            app:layout_constraintTop_toBottomOf="@+id/timesET" app:layout_constraintStart_toStartOf="@+id/timesET"
+            app:layout_constraintEnd_toEndOf="@+id/timesET" android:textSize="72dp" android:textColor="#000"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/plusET"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/equationTXT"
+            app:layout_constraintStart_toStartOf="@+id/equationTXT" app:layout_constraintEnd_toEndOf="@+id/equationTXT"/>
+    <Button
+            android:text="Check"
+            android:layout_width="120dp"
+            android:layout_height="100dp"
+            android:id="@+id/checkBTN" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/plusET" app:layout_constraintStart_toStartOf="@+id/plusET"
+            app:layout_constraintEnd_toEndOf="@+id/plusET"/>
 </android.support.constraint.ConstraintLayout>
